# vtk-dicom

./: CMakeLists.txt  CTestConfig.cmake  Copyright.txt  Readme.txt  TestDICOMDisplay.cxx  TestDICOMMetaData.cxx  TestDICOMParser.cxx  TestDICOMReader.cxx  TestDICOMSequence.cxx  TestDICOMSorter.cxx  TestDICOMVR.cxx  TestDICOMValue.cxx  makedict.py  module.cmake  nemadict.txt  vtk.module  vtkDICOMAttributeTags.cxx  vtkDICOMAttributeTags.h  vtkDICOMCTGenerator.cxx  vtkDICOMCTGenerator.h  vtkDICOMCTRectifier.cxx  vtkDICOMCTRectifier.h  vtkDICOMCharacterSet.cxx  vtkDICOMCharacterSet.h  vtkDICOMCompiler.cxx  vtkDICOMCompiler.h  vtkDICOMDataElement.cxx  vtkDICOMDataElement.h  vtkDICOMDictEntry.cxx  vtkDICOMDictEntry.h  vtkDICOMDictHash.cxx  vtkDICOMDictHash.h  vtkDICOMDictPrivate.cxx  vtkDICOMDictPrivate.h  vtkDICOMDictionary.cxx  vtkDICOMDictionary.h  vtkDICOMDirectory.cxx  vtkDICOMDirectory.h  vtkDICOMElement.cxx  vtkDICOMElement.h  (+57 more)
CMake/: DICOMConfig.cmake.in  DICOMConfigVersion.cmake.in  FindDCMTK.cmake  UseDICOM.cmake.in  dicom-config.cmake.in  pkgIndex.tcl.in  vtkDICOMBuild.h.in  vtkDICOMConfig.h.in  vtkDICOMModule.h.in  vtkWrapHierarchy.cmake
DicomCli/: CMakeLists.txt  mainmacro.cxx  mainmacro.h  progress.cxx  progress.h  readquery.cxx  readquery.h  vtkConsoleOutputWindow.cxx  vtkConsoleOutputWindow.h
Documents/: Attributes.md  CharacterSet.md  Directories.md  ImageDisplay.md  ImageOrientation.md  ImageReader.md  ImageWriter.md  Installation.md  License.md  Main.md
Examples/: CMakeLists.txt  DICOMRewriter.cxx  TestDICOMCompiler.cxx  TestDICOMDirectory.cxx  TestDICOMDisplay.cxx  TestDICOMFileSorter.cxx  TestDICOMOverlay.cxx  TestDICOMParser.cxx  TestDICOMReader.cxx  TestDICOMRealWorldValue.cxx  TestDICOMSorter.cxx  TestDICOMWriter.cxx  TestNIFTIDisplay.cxx  TestScancoCTDisplay.cxx
Programs/: CMakeLists.txt  dicomdump.cxx  dicomfind.cxx  dicompull.cxx  dicomtocsv.cxx  dicomtodicom.cxx  dicomtonifti.cxx  minctonifti.cxx  nifticenter.cxx  niftidump.cxx  niftitodicom.cxx  scancodump.cxx  scancotodicom.cxx
Source/: CMakeLists.txt  dicom.module  vtkDICOMAlgorithm.cxx  vtkDICOMAlgorithm.h  vtkDICOMApplyPalette.cxx  vtkDICOMApplyPalette.h  vtkDICOMApplyRealWorldMapping.cxx  vtkDICOMApplyRealWorldMapping.h  vtkDICOMApplyRescale.cxx  vtkDICOMApplyRescale.h  vtkDICOMCTGenerator.cxx  vtkDICOMCTGenerator.h  vtkDICOMCTRectifier.cxx  vtkDICOMCTRectifier.h  vtkDICOMCharacterSet.cxx  vtkDICOMCharacterSet.h  vtkDICOMCharacterSetTables.cxx  vtkDICOMCharacterSetTables.h  vtkDICOMCompiler.cxx  vtkDICOMCompiler.h  vtkDICOMDataElement.cxx  vtkDICOMDataElement.h  vtkDICOMDictEntry.cxx  vtkDICOMDictEntry.h  vtkDICOMDictHash.cxx  vtkDICOMDictHash.h  vtkDICOMDictPrivate.cxx  vtkDICOMDictPrivate.h  vtkDICOMDictionary.cxx  vtkDICOMDictionary.h  vtkDICOMDirectory.cxx  vtkDICOMDirectory.h  vtkDICOMFile.cxx  vtkDICOMFile.h  vtkDICOMFileDirectory.cxx  vtkDICOMFileDirectory.h  vtkDICOMFilePath.cxx  vtkDICOMFilePath.h  vtkDICOMFileSorter.cxx  vtkDICOMFileSorter.h  (+64 more)
Testing/: CMakeLists.txt  TestDICOMCharacterSet.cxx  TestDICOMDictionary.cxx  TestDICOMFilePath.cxx  TestDICOMItem.cxx  TestDICOMJava.java.in  TestDICOMMetaData.cxx  TestDICOMPython.py  TestDICOMSequence.cxx  TestDICOMTagPath.cxx  TestDICOMTcl.tcl  TestDICOMUtilities.cxx  TestDICOMVM.cxx  TestDICOMVR.cxx  TestDICOMValue.cxx
Utilities/: Readme.txt  charnotes.txt  charsets.py  chartables.py  charutil.py  codepage_gb18030.py  codepage_iso2022.py  codepage_iso8859.py  context_group.txt  cp949.py  frame_of_reference.txt  make_vm.py  makedict.py  nemadict.txt  nemauids.txt  parsedic.py  parsetpl.py  parseuid.py  test_casefold.py  test_gb18030.py  uid_values.txt
